Closed Bug 724275 Opened 14 years ago Closed 14 years ago

fix -Wswitch warnings

Categories

(Core :: Graphics, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: froydnj, Assigned: froydnj)

Details

Attachments

(1 file)

GCC complains about switches over enums that don't have default cases. In the interest of reducing warnings, these switches should be fixed.
Attached patch patchSplinter Review
Simple patch. It seemed better to eliminate the duplicate code in SourceSurfaceCairo.cpp than fixing the switches.
Attachment #594465 - Flags: review?(jmuizelaar)
Attachment #594465 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Whiteboard: [autoland-try]
Whiteboard: [autoland-try] → [autoland-in-queue]
Autoland Patchset: Patches: 594465 Branch: mozilla-central => try Destination: http://hg.mozilla.org/try/rev/388039878d56 Try run started, revision 388039878d56. To cancel or monitor the job, see: https://tbpl.mozilla.org/?tree=Try&rev=388039878d56
Try run for 388039878d56 is complete. Detailed breakdown of the results available here: https://tbpl.mozilla.org/?tree=Try&rev=388039878d56 Results (out of 208 total builds): success: 186 warnings: 21 failure: 1 Builds (or logs if builds failed) available at: http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/autolanduser@mozilla.com-388039878d56
Whiteboard: [autoland-in-queue]
Status: NEW → ASSIGNED
Keywords: checkin-needed
Target Milestone: --- → mozilla13
Version: unspecified → Trunk
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: