Bug 724275 - fix -Wswitch warnings; r=jrmuizel

--HG--
extra : rebase_source : f993c394c664c5ef205746950f33763da3d8364e